--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1168,7 +1168,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #9f94db;
+  background: #2f2944;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
